# blueprintcalc

./: .clang-format  CMakeLists.txt  Makefile  blueprintcalc  blueprintcalc.kdev4  blueprintcalc.pro  main.cpp  moc_3dview.cpp  moc_selector.cpp  old.cmake.txt
.kdev4/: blueprintcalc.kdev4
include/: 3dview.h  alignment.h  commandline.h  enums.h  imageview.h  infoview.h  pinning.h  selector.h  singleton.h  texturedplane.h  window.h
include/blueprint/: point.h
include/control/: blueprint.h  blueprintview.h  commandline.h  selector.h
include/core/: alignment.h  blueprint.h  blueprintview.h  constants.h  enums.h  intersection.h  point.h
include/render/: line.h  plane.h  point.h  point2d.h  point3d.h  scene.h
include/view/: blueprintview.h  blueprintviewlock.h  image.h  info.h  space.h  window.h
src/: 3dview.cpp  alignment.cpp  commandline.cpp  imageview.cpp  pinning.cpp  selector.cpp  test.cpp  texturedplane.cpp  window.cpp
src/blueprint/: point.cpp
src/control/: blueprint.cpp  blueprintview.cpp  commandline.cpp  selector.cpp
src/core/: alignment.cpp  blueprint.cpp  blueprintview.cpp  constants.cpp  intersection.cpp  point.cpp
src/render/: plane.cpp  point.cpp  point2d.cpp  point3d.cpp  scene.cpp
src/view/: blueprintview.cpp  blueprintviewlock.cpp  image.cpp  info.cpp  space.cpp  window.cpp
test/: align.py
ui/: blueprintviewlock.ui  info.ui
